<resources>
    <string name="app_name">Pokemon App</string>
    <string name="searchHint">Enter Pokemon Name Here</string>
    <string name="menuViewSavedText">View Saved Pokemon</string>
    <string name="menuSearchText">Search for Pokemon</string>
    <string name="heightText">Height: </string>
    <string name="weightText">Weight: </string>
    <string name="saveButton">Save</string>
    <string name="deleteButton">Remove</string>
    <string name="weightMeasurement">kg</string>
    <string name="heightMeasurement">m</string>
    <string name="speedText">Speed</string>
    <string name="spDefText">Sp. Def</string>
    <string name="spAttText">Sp. Att</string>
    <string name="defenseText">Defense</string>
    <string name="attackText">Attack</string>
    <string name="hpText">HP</string>
    <string name="searchErrorTitle">Error! </string>
    <string name="searchErrorMsg">Unable to find any pokemon with that name, make sure to check your spelling.</string>
    <string name="emptyErrorMsg">Please type into the search before submitting!</string>
    <string name="ok">OK</string>
    <string name="menuDefaultSearch">Display Default Search</string>


</resources>